--- a/login.html
+++ b/login.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>git</title>
+	<title>login</title>
 </head>
 <body>
-	login form
+	login from
 </body>
 </html>
